Assignment3/assignment3/upload/target/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "':='", "'+'", "'-'", "'*'", "'/'", "<INVALID>", "<INVALID>", 
                     "'='", "'>'", "'>='", "'<'", "'<='", "<INVALID>", "<INVALID>", 
                     "'<>'", "<INVALID>", "','", "'..'", "':'", "';'", "'['", 
                     "']'", "'('", "')'", "'{'", "'}'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'\"'" ]

    symbolicNames = [ "<INVALID>", "BOOLEAN", "BREAK", "CONTINUE", "ELSE", 
                      "FOR", "REAL", "IF", "INTEGER", "RETURN", "VOIDTYPE", 
                      "DO", "WHILE", "STRING", "WITH", "TO", "DOWNTO", "THEN", 
                      "BEGIN", "END", "FUNCTION", "PROCEDURE", "VAR", "ARRAY", 
                      "OF", "TRADBLOCK", "BLOCK", "LINE", "ASSIOP", "ADDOP", 
                      "SUBOP", "MULOP", "DIVOP", "DIVINOP", "MODOP", "EQUOP", 
                      "GTOP", "GTEOP", "LTOP", "LTEOP", "ANDOP", "OROP", 
                      "NEOP", "NOTOP", "COMMA", "DOUDOT", "COLON", "SEMI", 
                      "LSB", "RSB", "LB", "RB", "LP", "RP", "INTLIT", "REALLIT", 
                      "BOOLLIT", "ID", "WS", "ERROR_CHAR", "STRINGLIT", 
                      "ILLEGAL_ESCAPE", "UNCLOSE_STRING" ]

    RULE_program = 0
    RULE_vardec = 1
    RULE_varlist = 2
    RULE_vartype = 3
    RULE_paramarr = 4
    RULE_vartypebasic = 5
    RULE_funcdec = 6
    RULE_paramlist = 7
    RULE_paramsingle = 8
    RULE_returntype = 9
    RULE_stmt = 10
    RULE_stmtsingle = 11
    RULE_matchstmt = 12
    RULE_ortherstmt = 13
    RULE_unmatchstmt = 14
    RULE_assignstmt = 15
    RULE_assignvar = 16
    RULE_arrayvar = 17
    RULE_indexexp = 18
    RULE_whilestmt = 19
    RULE_whilebody = 20
    RULE_forstmt = 21
    RULE_forbody = 22
    RULE_breakstmt = 23
    RULE_continuestmt = 24
    RULE_compoundstmt = 25
    RULE_returnstmt = 26
    RULE_returnbody = 27
    RULE_withstmt = 28
    RULE_funcall = 29
    RULE_calllist = 30
    RULE_callnosemi = 31
    RULE_procdec = 32
    RULE_expstmt = 33
    RULE_expr = 34
    RULE_exp0 = 35
    RULE_exp1 = 36
    RULE_exp2 = 37
    RULE_exp3 = 38
    RULE_exp4 = 39
    RULE_exp5 = 40
    RULE_literals = 41

    ruleNames =  [ "program", "vardec", "varlist", "vartype", "paramarr", 
                   "vartypebasic", "funcdec", "paramlist", "paramsingle", 
                   "returntype", "stmt", "stmtsingle", "matchstmt", "ortherstmt", 
                   "unmatchstmt", "assignstmt", "assignvar", "arrayvar", 
                   "indexexp", "whilestmt", "whilebody", "forstmt", "forbody", 
                   "breakstmt", "continuestmt", "compoundstmt", "returnstmt", 
                   "returnbody", "withstmt", "funcall", "calllist", "callnosemi", 
                   "procdec", "expstmt", "expr", "exp0", "exp1", "exp2", 
                   "exp3", "exp4", "exp5", "literals" ]

    EOF = Token.EOF
    BOOLEAN=1
    BREAK=2
    CONTINUE=3
    ELSE=4
    FOR=5
    REAL=6
    IF=7
    INTEGER=8
    RETURN=9
    VOIDTYPE=10
    DO=11
    WHILE=12
    STRING=13
    WITH=14
    TO=15
    DOWNTO=16
    THEN=17
    BEGIN=18
    END=19
    FUNCTION=20
    PROCEDURE=21
    VAR=22
    ARRAY=23
    OF=24
    TRADBLOCK=25
    BLOCK=26
    LINE=27
    ASSIOP=28
    ADDOP=29
    SUBOP=30
    MULOP=31
    DIVOP=32
    DIVINOP=33
    MODOP=34
    EQUOP=35
    GTOP=36
    GTEOP=37
    LTOP=38
    LTEOP=39
    ANDOP=40
    OROP=41
    NEOP=42
    NOTOP=43
    COMMA=44
    DOUDOT=45
    COLON=46
    SEMI=47
    LSB=48
    RSB=49
    LB=50
    RB=51
    LP=52
    RP=53
    INTLIT=54
    REALLIT=55
    BOOLLIT=56
    ID=57
    WS=58
    ERROR_CHAR=59
    STRINGLIT=60
    ILLEGAL_ESCAPE=61
    UNCLOSE_STRING=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def vardec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.VardecContext)
            else:
                return self.getTypedRuleContext(MPParser.VardecContext,i)


        def funcdec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.FuncdecContext)
            else:
                return self.getTypedRuleContext(MPParser.FuncdecContext,i)


        def procdec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ProcdecContext)
            else:
                return self.getTypedRuleContext(MPParser.ProcdecContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 87
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MPParser.VAR]:
                    self.state = 84
                    self.vardec()
                    pass
                elif token in [MPParser.FUNCTION]:
                    self.state = 85
                    self.funcdec()
                    pass
                elif token in [MPParser.PROCEDURE]:
                    self.state = 86
                    self.procdec()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 89 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0)):
                    break

            self.state = 91
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def varlist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.VarlistContext)
            else:
                return self.getTypedRuleContext(MPParser.VarlistContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_vardec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardec" ):
                return visitor.visitVardec(self)
            else:
                return visitor.visitChildren(self)




    def vardec(self):

        localctx = MPParser.VardecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_vardec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(MPParser.VAR)
            self.state = 95 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 94
                self.varlist()
                self.state = 97 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.ID)
            else:
                return self.getToken(MPParser.ID, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def vartype(self):
            return self.getTypedRuleContext(MPParser.VartypeContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_varlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarlist" ):
                return visitor.visitVarlist(self)
            else:
                return visitor.visitChildren(self)




    def varlist(self):

        localctx = MPParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(MPParser.ID)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 100
                self.match(MPParser.COMMA)
                self.state = 101
                self.match(MPParser.ID)
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 107
            self.match(MPParser.COLON)
            self.state = 108
            self.vartype()
            self.state = 109
            self.match(MPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VartypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vartypebasic(self):
            return self.getTypedRuleContext(MPParser.VartypebasicContext,0)


        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def paramarr(self):
            return self.getTypedRuleContext(MPParser.ParamarrContext,0)


        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def getRuleIndex(self):
            return MPParser.RULE_vartype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVartype" ):
                return visitor.visitVartype(self)
            else:
                return visitor.visitChildren(self)




    def vartype(self):

        localctx = MPParser.VartypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vartype)
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.BOOLEAN, MPParser.REAL, MPParser.INTEGER, MPParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.vartypebasic()
                pass
            elif token in [MPParser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.match(MPParser.ARRAY)
                self.state = 113
                self.paramarr()
                self.state = 114
                self.match(MPParser.OF)
                self.state = 115
                self.vartypebasic()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamarrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(MPParser.LSB, 0)

        def DOUDOT(self):
            return self.getToken(MPParser.DOUDOT, 0)

        def RSB(self):
            return self.getToken(MPParser.RSB, 0)

        def INTLIT(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.INTLIT)
            else:
                return self.getToken(MPParser.INTLIT, i)

        def SUBOP(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SUBOP)
            else:
                return self.getToken(MPParser.SUBOP, i)

        def getRuleIndex(self):
            return MPParser.RULE_paramarr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamarr" ):
                return visitor.visitParamarr(self)
            else:
                return visitor.visitChildren(self)




    def paramarr(self):

        localctx = MPParser.ParamarrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_paramarr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(MPParser.LSB)

            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUBOP:
                self.state = 120
                self.match(MPParser.SUBOP)


            self.state = 123
            self.match(MPParser.INTLIT)
            self.state = 125
            self.match(MPParser.DOUDOT)

            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUBOP:
                self.state = 126
                self.match(MPParser.SUBOP)


            self.state = 129
            self.match(MPParser.INTLIT)
            self.state = 131
            self.match(MPParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VartypebasicContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return MPParser.RULE_vartypebasic

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVartypebasic" ):
                return visitor.visitVartypebasic(self)
            else:
                return visitor.visitChildren(self)




    def vartypebasic(self):

        localctx = MPParser.VartypebasicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vartypebasic)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.BOOLEAN) | (1 << MPParser.REAL) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncdecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def returntype(self):
            return self.getTypedRuleContext(MPParser.ReturntypeContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compoundstmt(self):
            return self.getTypedRuleContext(MPParser.CompoundstmtContext,0)


        def paramlist(self):
            return self.getTypedRuleContext(MPParser.ParamlistContext,0)


        def vardec(self):
            return self.getTypedRuleContext(MPParser.VardecContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_funcdec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdec" ):
                return visitor.visitFuncdec(self)
            else:
                return visitor.visitChildren(self)




    def funcdec(self):

        localctx = MPParser.FuncdecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcdec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(MPParser.FUNCTION)
            self.state = 136
            self.match(MPParser.ID)
            self.state = 137
            self.match(MPParser.LB)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 138
                self.paramlist()


            self.state = 141
            self.match(MPParser.RB)
            self.state = 142
            self.match(MPParser.COLON)
            self.state = 143
            self.returntype()
            self.state = 144
            self.match(MPParser.SEMI)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 145
                self.vardec()


            self.state = 148
            self.compoundstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramsingle(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ParamsingleContext)
            else:
                return self.getTypedRuleContext(MPParser.ParamsingleContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_paramlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamlist" ):
                return visitor.visitParamlist(self)
            else:
                return visitor.visitChildren(self)




    def paramlist(self):

        localctx = MPParser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_paramlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 151 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 150
                        self.paramsingle()
                        self.state = 153 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==MPParser.ID):
                            break

                    self.state = 155
                    self.match(MPParser.SEMI) 
                self.state = 161
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

            self.state = 162
            self.paramsingle()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamsingleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.ID)
            else:
                return self.getToken(MPParser.ID, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def vartype(self):
            return self.getTypedRuleContext(MPParser.VartypeContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_paramsingle

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamsingle" ):
                return visitor.visitParamsingle(self)
            else:
                return visitor.visitChildren(self)




    def paramsingle(self):

        localctx = MPParser.ParamsingleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paramsingle)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(MPParser.ID)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 165
                self.match(MPParser.COMMA)
                self.state = 166
                self.match(MPParser.ID)
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 172
            self.match(MPParser.COLON)
            self.state = 173
            self.vartype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReturntypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vartype(self):
            return self.getTypedRuleContext(MPParser.VartypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_returntype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturntype" ):
                return visitor.visitReturntype(self)
            else:
                return visitor.visitChildren(self)




    def returntype(self):

        localctx = MPParser.ReturntypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_returntype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.vartype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmtsingle(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.StmtsingleContext)
            else:
                return self.getTypedRuleContext(MPParser.StmtsingleContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = MPParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.BREAK) | (1 << MPParser.CONTINUE) | (1 << MPParser.FOR) | (1 << MPParser.IF) | (1 << MPParser.RETURN) | (1 << MPParser.WHILE) | (1 << MPParser.WITH) | (1 << MPParser.BEGIN) | (1 << MPParser.LB) | (1 << MPParser.ID))) != 0):
                self.state = 177
                self.stmtsingle()
                self.state = 182
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtsingleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def matchstmt(self):
            return self.getTypedRuleContext(MPParser.MatchstmtContext,0)


        def unmatchstmt(self):
            return self.getTypedRuleContext(MPParser.UnmatchstmtContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_stmtsingle

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtsingle" ):
                return visitor.visitStmtsingle(self)
            else:
                return visitor.visitChildren(self)




    def stmtsingle(self):
